--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url(default.css);
 @import url(header.css);
 @import url(checkbox.css);
 @import url(inputBox.css);
 @import url(btn.css);
 @import url(reponsividade.css);
+@import url(modal.css);
