--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,10 @@
+@import url(colors.css);
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
 body {
     display: flex;
     align-items: center;
@@ -13,7 +13,6 @@ body {
     flex-direction: column;
     gap: 30px;
 
-    background: #2a3d5f;
-    
-    color: blueviolet;
+    background:var(--background-body);
+    color: var(--color-text-all);
 }
