--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,5 @@
+@import url(colors.css);
+
 header {
     display: block;
     margin-bottom: 20px;
@@ -5,10 +7,9 @@ header {
     justify-content: center;
     font-size: 24px;
 }
-
 header h4 {
     font-family: 'Abel', sans-serif;
-    color: #00dfc4;
+    color: var(--cor-header-h4);
     letter-spacing: 0.34em;
     font-size: 16px;
 }
