--- a/css/modal.css
+++ b/css/modal.css
@@ -1,13 +1,9 @@
-:root
-{
-  --corfundoModal: rgba(0, 0, 0, 0.9);
-  --corfontModal: rgb(81, 18, 122);
-}
+@import url(colors.css);
 dialog{
   content: "";
   display: flex;
   width: 100%;
-  height:  100vh;
+  height:  100%;
   
   align-items: center;
   justify-content: center;
