--- a/css/inputBox.css
+++ b/css/inputBox.css
@@ -1,3 +1,4 @@
+@import url(colors.css);
 .inputBox {
     position: relative;
     width: 400px;
@@ -7,11 +8,11 @@
 .inputBox input {
     width: 100%;
     padding: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    background: #1d2b3a;
+    border: 1px solid var(--cor-inputBox-border);
+    background: var(--cor-background-inputBox);
     border-radius: 5px;
     outline: none;
-    color: #f1f1f1;
+    color: var(--cor-text-inputBox);
     font-size: 1em;
 }
 
@@ -21,41 +22,41 @@
     padding: 10px;
     pointer-events: none;
     font-size: 1em;
-    color: rgba(255, 255, 255, 0.25);
+    color: var(--cor-span-inputBox);
     text-transform: uppercase;
     transition: 0.5s;
 }
 
 .inputBox input:valid ~ span,
 .inputBox input:focus ~ span {
-    color: #00dfc4;
+    color: var(--cor-focus-inputBox);
     transform: translateX(10px) translateY(-7px);
     font-size: 0.70em;
     padding: 0 10px;
     background: #1d2b3a;
-    border-left: 1px solid #00dfc4;
-    border-right: 1px solid #00dfc4;
+    border-left: 1px solid var(--cor-focus-inputBox);
+    border-right: 1px solid var(--cor-focus-inputBox);
     letter-spacing: 0.2em;
 }
 
 .inputBox:nth-child(2) input:valid ~ span,
 .inputBox:nth-child(2) input:focus ~ span
 {
-    background: #00dfc4;
-    color: #1d2b3a;
+    background: var(--cor-background-inputBoxChild-focusSpan);
+    color: var(--cor-text-inputBoxChild-focusSpan);
     border-radius: 2px;
 }
 .inputBox:nth-child(3) input:valid ~ span,
 .inputBox:nth-child(3) input:focus ~ span {
-    background: #00dfc4;
-    color: #1d2b3a;
+    background: var(--cor-background-inputBoxChild-focusSpan);
+    color: var(--cor-text-inputBoxChild-focusSpan);
     border-radius: 2px;
 }
 
 .inputBox:nth-child(4) input:valid ~ span,
 .inputBox:nth-child(4) input:focus ~ span
 {
-    background: #00dfc4;
-    color: #1d2b3a;
+    background: var(--cor-background-inputBoxChild-focusSpan);
+    color: var(--cor-text-inputBoxChild-focusSpan);
     border-radius: 2px;
 }
