--- a/html/css/animations.css
+++ b/html/css/animations.css
@@ -32,23 +32,23 @@
 
 .anime1{
 
-	animation: objectsInScreen 1s ease-in;
+	animation: objectsInScreen 0.6s ease-in;
 
 }
 
 .anime2{
 
-	animation: objectsInScreen 1.5s ease-in;
+	animation: objectsInScreen 0.8s ease-in;
 
 }
 .anime3{
 
-	animation: objectsInScreen 2s ease-out;
+	animation: objectsInScreen 1s ease-out;
 
 }
-.anime4{
+.anime4 {
 
-	animation: popupObjects 2.5s ease-out;
+	animation: popupObjects 1s ease-out;
 
 }
 
@@ -67,10 +67,12 @@
 @keyframes popupObjects {
 
 	0%{
-		opacity: 0%;
+		transform: scale(100);
+		opacity: 0;
 	}
 	100%{
-		opacity: 100%;
+		opacity: 1;
+		transform: scale(0);
 	}
 	
 }
